# helheim-atlas-lidar

./: .gitignore  README.md  atlas-lidar-helheim.yaml  environment.yml  standard_seperated_displacement_V2.py
displacement/: Atlas.cpp  Atlas.hpp  CMakeLists.txt  Field.hpp  Grid.hpp  Raster.hpp  build.sh
processing/: standard_seperated_displacement_NCC.py  standard_seperated_displacement_NCC_specific_hour.py  standard_seperated_displacement_V2.py  standard_seperated_displacement_V2_atlas_north.py  sweep_matcher_6hr_local.py  sweep_matcher_6hr_server.py
vel_pys/: velocity_generation.py
